--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,13 +1,69 @@
-<h2><%= @event.title %> on <%= @event.date %></h2>
-<h3>Box Office Ticket List</h3>
+<h2><%= @event.title %></h2>
+<h2>The Control Room</h2>
 
 <ul>
   <li><%= link_to "Back", root_path%></li>
 </ul>
 
+<h3>VIP Guest List</h3>
+
 <div class="table-responsive">
-<table class="table table-striped table-sm" id="events">
-<thead>
+<table class="table table-sm col-md-12">
+  <thead class="thead-light">
+    <tr>
+      <% @guest_params.each do |param| %>
+        <% column_title = param.dup.gsub('_', ' ')%>
+        <% column_title.capitalize! %>
+        <th><%= column_title %></th>
+      <% end %>
+      
+      <th>Action</th>
+      <th>Ticket Booking Status</th>
+      <th>Total Booked</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @guests.each do |guest| %>
+      <tr>
+        <% @guest_params.each do |param| %>
+          <td>
+            <%= best_in_place [@event, guest], param, :as => :input, :place_holder => "#{guest[param]}" %>
+          </td>
+        <% end %>
+        <td>
+          <%= link_to "Send",  send_event_guest_path(@event, guest)%>
+          <%= link_to "Delete", [@event, guest], method: :delete, data: { confirm: "Are you sure?" } %>
+        </td>
+        <td>
+          <%= guest.booking_status %>
+        </td>
+        <td>
+          <%= guest.total_booked_num %>
+        </td>
+      </tr>
+    <% end %>
+    <tr>
+      <%= form_for [@event, @event.guests.build] do |form| %>
+        <% @guest_params.each do |param| %>     
+          <td> 
+            <%= form.text_field :"#{param}" %>
+          </td>
+        <% end %>
+        <td><%= submit_tag("Add") %></td>
+      <% end %>
+      
+      <!--<% (0..1).each do |i| %>     -->
+      <!--  <td></td>-->
+      <!--<% end %>-->
+    </tr>
+  </tbody>
+</table>
+</div>
+
+<h3>Box Office List</h3>
+<div class="table-responsive">
+<table class="table table-sm" id="events">
+<thead class="thead-light">
   <tr>
     <% @customers[0].each do |column_name| %>
       <th><%= column_name %></th>
