--- a/app/views/guest_mailer/rsvp_confirmation_email.text.erb
+++ b/app/views/guest_mailer/rsvp_confirmation_email.text.erb
@@ -1,6 +1,8 @@
-Welcome to example.com, 
-===============================================
-
-You have reversed for <% @number %> people. 
+Your seat assignment has been confirmed.
+Name: <%= @guest.first_name %> <%= @guest.last_name %>
+Event title: <%= @event.title %>
+Event date: <%= @event.date %>
+Ticket Number: <%= @guest.total_booked_num %>
+Seat Category: <%= @guest.seat_category %>
 
 Thanks for joining and have a great day!
