--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -4,12 +4,17 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Your seat assignment has been confirmed.</h1>
-    <p><b>Name: <%= @guest.first_name %> <%= @guest.last_name %></b></p>
+    <p>Hi <%= @guest.first_name %>,</p>
+    <p>
+      Congratulations! You're invited by <%= @guest.added_by %> to an event.
+    </p>
     <p><b>Event title: <%= @event.title %></b></p>
     <p><b>Event date: <%= @event.date %></b></p>
     <p><b>Ticket Number: <%= @guest.total_booked_num %></b></p>
     <p><b>Seat Category: <%= @guest.seat_category %></b></p>
-    <p>Thanks for joining and have a great day!</b></p>
+    <p>
+      Please RSVP to confirm attendence with this link: <%= link_to 'RSVP', edit_event_guest_url(@event, @guest, :protocol => 'https') %>.
+    </p>
+    <p>Thank you and have a great day!</p>
   </body>
 </html>
