--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -13,7 +13,7 @@
   </div>
 
   <div>
-    <%= label_tag(:event_title, "Name of the Event (as seen in the Box Office Seat-Table file-name):") %><br>
+    <%= label_tag(:event_title, "Name of the Event:") %><br>
     <%= text_field_tag(:event_title) %>
   </div>
   
