--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,28 +1,22 @@
-<p>Welcome to EVENTNXT, a tool to manage your Guest List RSVP and Box Office Ticket Sales data of your event in real-time. Have a comprehensive picture of your yet-to-be-booked seats at any time from one central Portal. Let’s get started.</p>
 
-<h2>Access Box Office Seat-Table: >>>>></h2> 
+<h2>Import Box Office Seat-Table: </h2> 
 <%= form_tag load_event_information_path do %>
   <div>
-    <%= label_tag(:username, "Username:") %><br>
+    <%= label_tag(:username, "Gmail Username:") %><br>
     <%= text_field_tag(:username) %>
   </div>
   
   <div>
-    <%= label_tag(:password, "Password:") %><br>
+    <%= label_tag(:password, "Gmail Password:") %><br>
     <%= text_field_tag(:password) %>
   </div>
 
   <div>
-    <%= label_tag(:event_title, "Name of the Event:") %><br>
+    <%= label_tag(:event_title, "Name of the Box Office Seat-Table:") %><br>
     <%= text_field_tag(:event_title) %>
   </div>
   
-  <div>
-    <%= label_tag(:file_type, "Box Office File-type:") %><br>
-    <%= text_field_tag(:file_type) %>
-  </div>
-  
-  <div>
-    <%= submit_tag("Create") %>
+  <div class="mt-3">
+    <%= submit_tag("Submit") %>
   </div>
 <% end %>
