--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,9 +1,33 @@
 <h2><%= @event.title %></h2>
-<h2>The Control Room</h2>
+<!--<h2>The Control Room</h2>-->
 
 <ul>
   <li><%= link_to "Back", root_path%></li>
 </ul>
+
+<h3>Summarized Ticket Commitments Information</h3>
+
+<div class="table-responsive">
+<table class="table table-sm col-md-12">
+  <thead class="thead-light">
+    <tr> 
+      <th>Total Seats</th>
+      <th>Total Box Office Commitments</th>
+      <th>Total VIP Guest Commitments</th>
+      <th>Balance</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td><%= best_in_place [@event], :total_seats, :as => :input, :place_holder => "#{@event.total_seats}", 
+              :url => event_path(@event) %></td>
+      <td><%= @event.total_seats_box_office %></td>
+      <td><%= @event.total_seats_guest %></td>
+      <td><%= @event.balance %></td>
+    </tr>
+  </tbody>
+</table>
+</div>
 
 <h3>VIP Guest List</h3>
 
