--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,22 +1,23 @@
 
-<h2>Import Box Office Seat-Table: </h2> 
+<h2>Import Box Office Table: </h2> 
 <%= form_tag load_event_information_path do %>
-  <div>
-    <%= label_tag(:username, "Gmail Username:") %><br>
-    <%= text_field_tag(:username) %>
-  </div>
+  <!--<div>-->
+  <!--  <%= label_tag(:username, "Gmail Username:") %><br>-->
+  <!--  <%= text_field_tag(:username) %>-->
+  <!--</div>-->
   
-  <div>
-    <%= label_tag(:password, "Gmail Password:") %><br>
-    <%= text_field_tag(:password) %>
-  </div>
+  <!--<div>-->
+  <!--  <%= label_tag(:password, "Gmail Password:") %><br>-->
+  <!--  <%= text_field_tag(:password) %>-->
+  <!--</div>-->
 
-  <div>
-    <%= label_tag(:event_title, "Name of the Box Office Seat-Table:") %><br>
-    <%= text_field_tag(:event_title) %>
-  </div>
+  <!--<div>-->
+  <!--  <%= label_tag(:event_title, "Name of the Box Office Seat-Table:") %><br>-->
+  <!--  <%= text_field_tag(:event_title) %>-->
+  <!--</div>-->
   
   <div class="mt-3">
+    <%= file_field_tag :file %>
     <%= submit_tag("Submit") %>
   </div>
 <% end %>
