--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,5 +1,5 @@
-
-<h2>1. Import New/Updated Box Office Spreadsheet AND Happy Halloween!: </h2> 
+<h2 style="color: orange;">HAPPY HALLOWEEN! </h2>
+<h2>1. Import New/Updated Box Office Spreadsheet: </h2> 
 <%= form_tag import_new_spreadsheet_path, multipart: true do %>
   <!--<div>-->
   <!--  <%= label_tag(:username, "Gmail Username:") %><br>-->
