testing event picture custom

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,6 +25,7 @@
   <div>
     <%= label_tag(:event_title, "Name of the Event:") %><br>
     <%= text_field_tag(:event_title) %>
+    <%= text_field_tag(:event_picture) %>
   </div>
   <div>
     <%= submit_tag("Open") %>
