--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -12,7 +12,7 @@
     <p><b>Event date: <%= @event.date %></b></p>
     <p><b>Ticket Number: <%= @guest.total_booked_num %></b></p>
     <p><b>Seat Category: <%= @guest.seat_category %></b></p>
-    <%= image_tag @event_pic.to_s %>
+    <p><%= image_tag(@event_pic.to_s) %></p>
     <p>
       Please RSVP to confirm attendence with this link: <%= link_to 'RSVP', edit_event_guest_url(@event, @guest, :protocol => 'https') %>.
     </p>
