--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -25,7 +25,7 @@
   <div>
     <%= label_tag(:event_title, "Name of the Event:") %><br>
     <%= text_field_tag(:event_title) %>
-    <%= text_field_tag(:event_picture) %>
+    <%= text_field_tag($inner_image_link) %>
   </div>
   <div>
     <%= submit_tag("Open") %>
