--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -11,6 +11,7 @@
 <table class="table table-sm col-md-12">
   <thead class="thead-light">
     <tr> 
+      <th>Seat Category</th>
       <th>Total Seats</th>
       <th>Total Box Office Commitments</th>
       <th>Total VIP Guest Commitments</th>
@@ -19,6 +20,7 @@
   </thead>
   <tbody>
     <tr>
+      <td><%= @event.seat_category %></td>
       <td><%= best_in_place [@event], :total_seats, :as => :input, :place_holder => "#{@event.total_seats}", 
               :url => event_path(@event) %></td>
       <td><%= @event.total_seats_box_office %></td>
