--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,4 @@
-<h2 style="color: orange;">HAPPY HALLOWEEN! </h2>
+<h2 style="color: orange;"><%= params.inspect %> </h2>
 <h2>1. Import New/Updated Box Office Spreadsheet: </h2> 
 <%= form_tag import_new_spreadsheet_path, multipart: true do %>
   <!--<div>-->
