--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,6 @@
 <h2><%= @event.title %></h2>
 <!--<h2>The Control Room</h2>-->
-<img src='<% $event_pic.to_s %>' alt=''>
+<img src=<%= $event_pic.to_s %>>
 <h2><%= $event_pic.to_s %></h2>
 <ul>
   <li><%= link_to "Back", root_path%></li>
