--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,10 @@
 <%= form_tag open_existed_spreadsheet_path do %>
   <div>
     <%= label_tag(:event_title, "Name of the Event:") %><br>
-    <%= text_field_tag(:event_title) %>
+    <%= text_field_tag(:event_title) %><br>
+    
+    <h2>3. Invitation Template: </h2>
+    <%= label_tag(:event_picture, "Invitation Picture Link:") %><br>
     <%= text_field_tag(:event_picture) %>
   </div>
   <div>
