--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,3 @@
-<h2 style="color: orange;"><%= params.inspect %> </h2>
 <h2>1. Import New/Updated Box Office Spreadsheet: </h2> 
 <%= form_tag import_new_spreadsheet_path, multipart: true do %>
   <!--<div>-->
@@ -12,6 +11,7 @@
   <!--</div>-->
   
   <div>
+    <%= label_tag(:file, "Accepted types: .xlsx") %><br>
     <%= file_field_tag(:file)%>
   </div>
   
@@ -31,6 +31,7 @@
     <%= text_field_tag(:event_picture) %>
   </div>
   <div>
-    <%= submit_tag("Open") %>
+    <br>
+    <%= submit_tag("Open Spreadsheet") %>
   </div>
 <% end %>
