--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -20,11 +20,13 @@
   </div>
 <% end %>
 
+<br>
+
 <h2>2. Open imported Box Office Spreadsheet: </h2> 
 <%= form_tag open_existed_spreadsheet_path do %>
   <div>
     <%= label_tag(:event_title, "Name of the Event:") %><br>
-    <%= text_field_tag(:event_title) %><br>
+    <%= text_field_tag(:event_title) %><br><br>
     
     <h2>3. Invitation Template: </h2>
     <%= label_tag(:event_picture, "Invitation Picture Link:") %><br>
