--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,9 @@
 <h2><%= @event.title %></h2>
 <!--<h2>The Control Room</h2>-->
+
 <img src=<%= $event_pic.to_s %>>
-<h2><%= $event_pic.to_s %></h2>
+<p>Source: <%= $event_pic.to_s %></p>
+
 <ul>
   <li><%= link_to "Back", root_path%></li>
 </ul>
