--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -4,18 +4,47 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <p>Hi <%= @guest.first_name %>,</p>
+    <style>
+    
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        .ticket {
+            text-align: center;
+            border: 3px solid black;
+            margin: 100px;
+        }
+        #img {
+            position: relative;
+            text-align: center;
+        }
+
+        #rsvp{
+            -webkit-appearance: button;
+            -moz-appearance: button;
+            appearance: button;
+            padding: 10px;
+            text-decoration: none;
+            color: initial;
+            background-color: black;
+
+        }
+        
+    </style>
+    <p>Hi GUEST,</p>
     <p>
-      Congratulations! You're invited by <%= @guest.added_by %> to an event.
+      Congratulations! You're invited by ADMIN to an event.
     </p>
-    <p><b>Event title: <%= @event.title %></b></p>
-    <p><b>Event date: <%= @event.date %></b></p>
-    <p><b>Ticket Number: <%= @guest.total_booked_num %></b></p>
-    <p><b>Seat Category: <%= @guest.seat_category %></b></p>
-    <img src=<%= $event_pic.to_s %>>
-    <p>
-      Please RSVP to confirm attendence with this link: <%= link_to 'RSVP', edit_event_guest_url(@event, @guest, :protocol => 'https') %>.
-    </p>
-    <p>Thank you and have a great day!</p>
+    <section class="ticket" style="background-color ;">
+        <h2>Event Title: <%= @event.title %></h2>
+        <div id="img"><img src="https://12thman.com/images/2019/8/30/stadium_pano.jpg" height="300px"></div>
+        <p><b>Guest Name:</b></p>
+        <p><b>Event date: <%= @event.date %></b></p>
+        <p><b>Ticket Number: <%= @guest.total_booked_num %></b></p>
+        <p><b>Seat Category: <%= @guest.seat_category %></b></p>
+        <p id="rsvp"><%= link_to 'RSVP', edit_event_guest_url(@event, @guest, :protocol => 'https') %></p>
+    </section>  
+    <p>Thank you and have a great day!</p><br>
+    <h2 style="color: white; background-color: lightblue; padding: 15px">EVENTNXT Team</h2>
   </body>
 </html>
