try style again

--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -31,11 +31,11 @@
         }
         
     </style>
-    <p>Hi GUEST,</p>
+    <p>Hi <%= @guest.first_name %>,</p>
     <p>
-      Congratulations! You're invited by ADMIN to an event.
+      Congratulations! You're invited by <%= @guest.added_by %> to an event.
     </p>
-    <section class="ticket" style="background-color ;">
+    <section class="ticket" style="background-color white; text-align: center; border: 3px solid black; margin: 100px;">
         <h2>Event Title: <%= @event.title %></h2>
         <div id="img"><img src="https://12thman.com/images/2019/8/30/stadium_pano.jpg" height="300px"></div>
         <p><b>Guest Name:</b></p>
