style try again

--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -35,7 +35,7 @@
     <p>
       Congratulations! You're invited by <%= @guest.added_by %> to an event.
     </p>
-    <section class="ticket" style="background-color white; text-align: center; border: 3px solid black; margin: 100px;">
+    <section class="ticket">
         <h2>Event Title: <%= @event.title %></h2>
         <div id="img"><img src="https://12thman.com/images/2019/8/30/stadium_pano.jpg" height="300px"></div>
         <p><b>Guest Name:</b></p>
