--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -35,7 +35,7 @@
     <p>
       Congratulations! You're invited by <%= @guest.added_by %> to an event.
     </p>
-    <section class="ticket">
+    <div class="ticket">
         <h2>Event Title: <%= @event.title %></h2>
         <div id="img"><img src="https://12thman.com/images/2019/8/30/stadium_pano.jpg" height="300px"></div>
         <p><b>Guest Name:</b></p>
@@ -43,7 +43,7 @@
         <p><b>Ticket Number: <%= @guest.total_booked_num %></b></p>
         <p><b>Seat Category: <%= @guest.seat_category %></b></p>
         <p id="rsvp"><%= link_to 'RSVP', edit_event_guest_url(@event, @guest, :protocol => 'https') %></p>
-    </section>  
+    </div>  
     <p>Thank you and have a great day!</p><br>
     <h2 style="color: white; background-color: lightblue; padding: 15px">EVENTNXT Team</h2>
   </body>
