--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -28,9 +28,11 @@
     <%= label_tag(:event_title, "Name of the Event:") %><br>
     <%= text_field_tag(:event_title) %><br><br>
     
-    <h2>3. Invitation Template: </h2>
+    <h2>Prepare RSVP Form: </h2>
     <%= label_tag(:event_picture, "Invitation Picture Link:") %><br>
-    <%= text_field_tag(:event_picture) %>
+    <%= text_field_tag(:event_picture) %><br><br>
+    <%= label_tag(:event_text, "Invitation Picture Link:") %><br>
+    <%= text_field_tag(:event_text) %>
   </div>
   <div>
     <br>
