--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -29,9 +29,9 @@
     <%= text_field_tag(:event_title) %><br><br>
     
     <h2>Prepare RSVP Form: </h2>
-    <%= label_tag(:event_picture, "Invitation Picture Link:") %><br>
+    <%= label_tag(:event_picture, "Insert event picture link:") %><br>
     <%= text_field_tag(:event_picture) %><br><br>
-    <%= label_tag(:event_text, "Invitation Picture Link:") %><br>
+    <%= label_tag(:event_text, "Insert event description:") %><br>
     <%= text_field_tag(:event_text) %>
   </div>
   <div>
