--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -43,6 +43,7 @@
         <p><b>Event date: <%= @event.date %></b></p>
         <p><b>Ticket Number: <%= @guest.total_booked_num %></b></p>
         <p><b>Seat Category: <%= @guest.seat_category %></b></p>
+        <p><strong>About Event: </strong><%= $event_txt.to_s %></p>
         <p id="rsvp"><%= link_to 'RSVP', edit_event_guest_url(@event, @guest, :protocol => 'https') %></p>
     </div>  
     <p>Thank you and have a great day!</p><br>
