--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <h2><%= @event.title %></h2>
 <!--<h2>The Control Room</h2>-->
 
-<img src=<%= $event_pic.to_s %>>
+<img src='<%= $event_pic.to_s %>' height="300px">
 <p>Source: <%= $event_pic.to_s %></p>
 
 <ul>
