--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -9,7 +9,6 @@
   } else {
     x.style.display = "none";
   }
-  return
 }
 </script>
 
@@ -42,10 +41,8 @@
     <%= label_tag(:event_title, "Name of the Event:") %><br>
     <%= text_field_tag(:event_title) %><br><br>
     
-    <h2>3. Prepare RSVP Form: </h2>
-    <button onclick="toggle()">Start</button>
-    
     <div id="rsvp-contents-toggle" style="display: none;">
+    <h2>3. Prepare RSVP Form: </h2>
     <%= label_tag(:event_picture, "Insert event picture link:") %><br>
     <%= text_field_tag(:event_picture) %><br><br>
     <%= label_tag(:event_text, "Insert event description:") %><br>
@@ -58,3 +55,6 @@
     <%= submit_tag("Open Spreadsheet") %>
   </div>
 <% end %>
+
+<br>
+<button onclick="toggle()">Create RSVP Form</button>
