--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -37,8 +37,8 @@
 <% end %>
 
 <br>
-<br>
 <button id="rsvp-prepper" onclick="toggle()">Create RSVP Form</button>
+<br>
 
 <h2>2. Open imported Box Office Spreadsheet: </h2> 
 <%= form_tag open_existed_spreadsheet_path do %>
@@ -47,8 +47,8 @@
     <%= text_field_tag(:event_title) %><br><br>
     
     <div id="rsvp-contents-toggle" style="display: none;">
-    <h2>Prepare RSVP Form: </h2>
-    <%= label_tag(:event_picture, "Insert event picture link:") %><br>
+    <h2>RSVP Form Contents: </h2>
+    <%= label_tag(:event_picture, "Insert image address or path:") %><br>
     <%= text_field_tag(:event_picture) %><br><br>
     <%= label_tag(:event_text, "Insert event description:") %><br>
     <%= text_field_tag(:event_text) %>
