--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -22,11 +22,11 @@
             -webkit-appearance: button;
             -moz-appearance: button;
             appearance: button;
-            padding: 10px;
+            padding: 20px;
+            font-size: 20px;
             text-decoration: none;
             color: white;
             background-color: black;
-          
         }
         
     </style>
