--- a/app/views/guest_mailer/rsvp_invitation_email.html.erb
+++ b/app/views/guest_mailer/rsvp_invitation_email.html.erb
@@ -27,6 +27,8 @@
             text-decoration: none;
             color: white;
             background-color: black;
+            margin-top: 15px;
+            margin-bottom: 15px;
         }
         
     </style>
