--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,18 +1,88 @@
-<h2>1. Import New/Updated Box Office Spreadsheet: </h2>
+<h2>Import New/Updated Box Office Spreadsheet: </h2>
+
+<style>
+    #rsvp-button {
+        -webkit-appearance: button;
+        -moz-appearance: button;
+        appearance: button;
+        padding: 20px;
+        font-size: 20px;
+        text-decoration: none;
+        color: white;
+        background-color: black;
+    }
+
+    .level-box{
+      margin-right: 5px;
+    }
+
+    .capacity-box{
+      margin-right: 5px;
+    }
+</style>
 
 <script>
   //JS toggles RSVP Form visibility
-  function toggle() {
+  function toggle_RSVP() {
   var button_name = document.getElementById("rsvp-prepper");
   var x = document.getElementById("rsvp-contents-toggle");
   if (x.style.display === "none") {
-    button_name.innerHTML = "Close RSVP Form";
+    button_name.innerHTML = "Close Invitation Card";
     x.style.display = "block";
   } else {
-    button_name.innerHTML = "Open RSVP Form";
+    button_name.innerHTML = "Open Invitation Card";
     x.style.display = "none";
   }
 }
+
+  function toggle_levels() {
+  var button_name = document.getElementById("seat-level-prepper");
+  var x = document.getElementById("level-contents-toggle");
+  if (x.style.display === "none") {
+    button_name.innerHTML = "Close Seat Preparer";
+    x.style.display = "block";
+  } else {
+    button_name.innerHTML = "Open Seat Preparer";
+    x.style.display = "none";
+  }
+}
+
+  function new_level(){
+    var add_new = document.getElementById("level-contents-toggle");
+    
+    var del_button = document.createElement("button");
+    del_button.type = "button";
+    del_button.innerHTML = "Delete";
+    
+    var level = document.createElement("input");
+    level.type = "text";
+    level.className = "level-box";
+    level.placeholder = "Enter Level"
+
+    var capacity = document.createElement("input");
+    capacity.type = "text";
+    capacity.className = "capacity-box"
+    capacity.placeholder = "Enter Capacity"
+
+    del_button.onclick = delete_boxes(del_button, level, capacity)
+
+    var br = document.createElement("br");
+    var br1 = document.createElement("br");
+    add_new.appendChild(level)
+    add_new.appendChild(capacity)
+    add_new.appendChild(del_button)
+    add_new.appendChild(br)
+    add_new.appendChild(br1)
+    
+
+  }
+
+  function delete_boxes(entry, level, capacity){
+    console.log("deleting...")
+    level.remove();
+    capacity.remove();
+    entry.remove();
+  }
 </script>
 
 <%= form_tag import_new_spreadsheet_path, multipart: true do %>
@@ -27,8 +97,9 @@
   <!--</div>-->
   
   <div>
-    <%= label_tag(:file, "Accepted types: .xlsx") %><br>
-    <%= file_field_tag(:file)%>
+    <br>
+    <%= file_field_tag(:file)%><br>
+    <%= label_tag(:file, "Accepted types: .xlsx") %>
   </div><br>
   
   <div>
@@ -37,17 +108,29 @@
 <% end %>
 
 <br>
-<button id="rsvp-prepper" onclick="toggle()">Create RSVP Form</button>
-<br><br>
 
-<h2>2. Open imported Box Office Spreadsheet: </h2> 
+<h2>Open imported Box Office Spreadsheet: </h2> 
 <%= form_tag open_existed_spreadsheet_path do %>
   <div>
     <%= label_tag(:event_title, "Name of the Event:") %><br>
     <%= text_field_tag(:event_title) %><br><br>
-    
+
+    <h2>Event Setup Panel</h2>
+    <br>
+    <button type="button" id="seat-level-prepper" onclick="toggle_levels()">Add Seating Levels</button>
+    <br><br>
+    <div id="level-contents-toggle" style="display: none;">
+    <h4>Edit Seat Levels</h4>
+    <%= text_field_tag(:event_picture, nil, placeholder: "Enter Level") %>
+    <%= text_field_tag(:event_text, nil, placeholder: "Enter Capacity") %>
+    <button type="button" id="new-level" onclick="new_level()">Add New Level</button><br><br>
+    </div>
+   
+    <br><br>
+    <button type="button" id="rsvp-prepper" onclick="toggle_RSVP()">Create Invitation Card</button>
+    <br><br>
     <div id="rsvp-contents-toggle" style="display: none;">
-    <h2>RSVP Form Contents: </h2>
+    <h4>Invitation Card Contents</h4>
     <%= label_tag(:event_picture, "Insert image address or path:") %><br>
     <%= text_field_tag(:event_picture) %><br><br>
     <%= label_tag(:event_text, "Insert event description:") %><br>
@@ -55,8 +138,8 @@
     </div>
     
   </div>
-  <div>
-    <br>
+  <div style="text-align: center;">
+    <br><br><br>
     <%= submit_tag("Open Spreadsheet") %>
   </div>
 <% end %>
