--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,10 +9,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-primary text-white mb-3">
+  <nav class="navbar navbar-expand-lg text-white mb-3" style="background: url(https://upload.wikimedia.org/wikipedia/commons/thumb/d/da/Portland_from_Pittock_Mansion_October_2019_panorama_2.jpg/1600px-Portland_from_Pittock_Mansion_October_2019_panorama_2.jpg); background-size: cover;">
     <h1 class="title">EVENTNXT</h1>
   </nav>
-  <div class="container">
+  <div class="container" >
     <%# Render "flash" messages in our application. This loads _flash.erb %>
     <%= render 'layouts/flash' %>
     <main id="main">
