--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -12,6 +12,10 @@
         background-color: black;
     }
 
+    .level-contents-toggle{
+      text-align: center;
+    }
+
     .level-box{
       margin-right: 5px;
     }
@@ -19,6 +23,7 @@
     .capacity-box{
       margin-right: 5px;
     }
+
 </style>
 
 <script>
@@ -49,40 +54,42 @@
 
   function new_level(){
     var add_new = document.getElementById("level-contents-toggle");
-    
     var del_button = document.createElement("button");
+    
     del_button.type = "button";
     del_button.innerHTML = "Delete";
+    del_button.onclick = () => {
+      level.remove();
+      capacity.remove();
+      del_button.remove();
+      br.remove();
+      br1.remove();
+      };
     
     var level = document.createElement("input");
     level.type = "text";
     level.className = "level-box";
     level.placeholder = "Enter Level"
+    
 
     var capacity = document.createElement("input");
     capacity.type = "text";
     capacity.className = "capacity-box"
     capacity.placeholder = "Enter Capacity"
+    
 
-    del_button.onclick = delete_boxes(del_button, level, capacity)
+    
 
     var br = document.createElement("br");
     var br1 = document.createElement("br");
-    add_new.appendChild(level)
-    add_new.appendChild(capacity)
-    add_new.appendChild(del_button)
-    add_new.appendChild(br)
-    add_new.appendChild(br1)
-    
-
+    add_new.appendChild(level);
+    add_new.appendChild(capacity);
+    add_new.appendChild(del_button);
+    add_new.appendChild(br);
+    add_new.appendChild(br1);
+      
   }
 
-  function delete_boxes(entry, level, capacity){
-    console.log("deleting...")
-    level.remove();
-    capacity.remove();
-    entry.remove();
-  }
 </script>
 
 <%= form_tag import_new_spreadsheet_path, multipart: true do %>
@@ -118,23 +125,27 @@
     <h2>Event Setup Panel</h2>
     <br>
     <button type="button" id="seat-level-prepper" onclick="toggle_levels()">Add Seating Levels</button>
+    
+    
     <br><br>
-    <div id="level-contents-toggle" style="display: none;">
-    <h4>Edit Seat Levels</h4>
+    <div id="level-contents-toggle" class="bg-secondary" style="display: none; text-align: center;">
+    <h4 style="text-align: center; padding-top: 10px;">Edit Seat Levels</h4>
+    <h6 style="color: red;"><br>WARNING: Not yet functional!<br></h6>
+
+    <div style="text-align: center;">
     <%= text_field_tag(:event_picture, nil, placeholder: "Enter Level") %>
     <%= text_field_tag(:event_text, nil, placeholder: "Enter Capacity") %>
     <button type="button" id="new-level" onclick="new_level()">Add New Level</button><br><br>
+    </div>
     </div>
    
     <br><br>
     <button type="button" id="rsvp-prepper" onclick="toggle_RSVP()">Create Invitation Card</button>
     <br><br>
-    <div id="rsvp-contents-toggle" style="display: none;">
+    <div id="rsvp-contents-toggle" class= "bg-secondary" style="display: none; text-align: center; padding-top: 10px; padding-bottom: 20px;">
     <h4>Invitation Card Contents</h4>
-    <%= label_tag(:event_picture, "Insert image address or path:") %><br>
-    <%= text_field_tag(:event_picture) %><br><br>
-    <%= label_tag(:event_text, "Insert event description:") %><br>
-    <%= text_field_tag(:event_text) %>
+    <%= text_field_tag(:event_picture, nil, placeholder: "Image address or path") %><br><br>
+    <%= text_field_tag(:event_text, nil, placeholder: "Event description") %>
     </div>
     
   </div>
