--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -8,6 +8,33 @@
   <li><%= link_to "Back", root_path%></li>
 </ul>
 
+<h3>Seat Categories</h3>
+
+<div class="table-responsive">
+<table class="table table-sm col-md-12">
+  <thead class="thead-light">
+    <tr> 
+      <th>Seat Category</th>
+      <th>Total Seats</th>
+      <th>Total Box Office Commitments</th>
+      <th>Total VIP Guest Commitments</th>
+      <th>Balance</th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @total_seat_wise_split.each do |row| %>
+      <tr>
+        <td><%= row.seat_category %></td>
+        <td><%= row.total_seats %></td>
+        <td><%= row.non_vip_seats %></td>
+        <td><%= row.vip_seats %></td>
+        <td><%= row.balance %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+</div>
+
 <h3>Summarized Ticket Commitments Information</h3>
 
 <div class="table-responsive">
