--- a/app/views/seating_types/index.html.erb
+++ b/app/views/seating_types/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Seating Types</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Seat category</th>
@@ -11,7 +11,9 @@
       <th>Box office seat count</th>
       <th>Balance seats</th>
       <th>Event</th>
-      <th colspan="3"></th>
+      <th>Show</th>
+      <th>Edit</th>
+      <th>Destroy</th>
     </tr>
   </thead>
 
