--- a/app/views/seating_types/show.html.erb
+++ b/app/views/seating_types/show.html.erb
@@ -1,4 +1,6 @@
+
 <p id="notice"><%= notice %></p>
+<div class="jumbotron">
 
 <p>
   <strong>Seat category:</strong>
@@ -30,5 +32,6 @@
   <%= @seating_type.event %>
 </p>
 
-<%= link_to 'Edit', edit_seating_type_path(@seating_type) %> |
-<%= link_to 'Back', seating_types_path %>
+<%= link_to 'Edit', edit_seating_type_path(@seating_type), class:"btn btn-secondary" %> |
+<%= link_to 'Back', seating_types_path, class:"btn btn-secondary" %>
+</div>
