--- a/app/views/seating_types/_form.html.erb
+++ b/app/views/seating_types/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: seating_type, local: true) do |form| %>
+<%= form_with(model: seating_type) do |form| %>
   <% if seating_type.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(seating_type.errors.count, "error") %> prohibited this seating_type from being saved:</h2>
@@ -13,32 +13,27 @@
 
   <div class="field form-group">
     <%= form.label :seat_category %>
-    <%= form.text_field :seat_category, class:"form-control" , placeholder:"PATRON"%>
+    <%= form.text_field :seat_category, class:"form-control" , value:"PATRON"%>
   </div>
 
   <div class="field form-group">
     <%= form.label :total_seat_count %>
-    <%= form.number_field :total_seat_count, class:"form-control", placeholder:1 %>
+    <%= form.number_field :total_seat_count, class:"form-control", value:1 %>
   </div>
 
   <div class="field form-group">
     <%= form.label :vip_seat_count %>
-    <%= form.number_field :vip_seat_count, class:"form-control", placeholder:1 %>
+    <%= form.number_field :vip_seat_count, class:"form-control", value:1 %>
   </div>
 
   <div class="field form-group">
     <%= form.label :box_office_seat_count %>
-    <%= form.number_field :box_office_seat_count, class:"form-control", placeholder:1 %>
+    <%= form.number_field :box_office_seat_count, class:"form-control", value:1 %>
   </div>
 
   <div class="field form-group">
-    <%= form.label :balance_seats %>
-    <%= form.number_field :balance_seats, class:"form-control", placeholder:1 %>
-  </div>
-
-  <div class="field form-group">
-    <%= form.label :event_id %>
-    <%= form.text_field :event_id, class:"form-control", placeholder:1 %>
+    <%= form.label :event_id  %>
+    <%= form.hidden_field :event_id, class:"form-control", value: Event.all %>
   </div>
 
   <div class="actions form-group">
