--- a/app/views/seating_types/index.html.erb
+++ b/app/views/seating_types/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1>Seating Types</h1>
 
 <table class="table">
@@ -10,7 +8,7 @@
       <th>Vip seat count</th>
       <th>Box office seat count</th>
       <th>Balance seats</th>
-      <th>Event</th>
+      <!--<th>Event</th>-->
       <th>Show</th>
       <th>Edit</th>
       <th>Destroy</th>
@@ -25,7 +23,7 @@
         <td><%= seating_type.vip_seat_count %></td>
         <td><%= seating_type.box_office_seat_count %></td>
         <td><%= seating_type.balance_seats %></td>
-        <td><%= seating_type.event %></td>
+        <!--<td><%= seating_type.event %></td>-->
         <td><%= link_to 'Show', seating_type %></td>
         <td><%= link_to 'Edit', edit_seating_type_path(seating_type) %></td>
         <td><%= link_to 'Destroy', seating_type, method: :delete, data: { confirm: 'Are you sure?' } %></td>
