removing event from form

--- a/app/views/seating_types/_form.html.erb
+++ b/app/views/seating_types/_form.html.erb
@@ -32,7 +32,7 @@
   </div>
 
   <div class="field form-group">
-    <%= form.label :event_id  %>
+    <!--<%= form.label :event_id  %>-->
     <%= form.hidden_field :event_id, class:"form-control", value: Event.all %>
   </div>
 
