--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,11 @@
 <h2><%= @event.title %></h2>
 <!--<h2>The Control Room</h2>-->
 
+<img src='<%= $event_pic.to_s %>' height='<%= $event_pic_size_left.to_s %>' width='<%= $event_pic_size_right.to_s %>'>
+<p>source</p>
+<p><%= $event_pic_size_left.to_s %></p>
+
+
 <ul>
   <li><%= link_to "Back", root_path%></li>
 </ul>
