fixed excel import

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -44,7 +44,7 @@
 </table>
 </div>
 
-<h3>VIP Guest List</h3>
+<h3>Guest List</h3>
 
 <div class="table-responsive">
 <table class="table table-sm col-md-12">
