--- a/app/views/events/create_event.html.erb
+++ b/app/views/events/create_event.html.erb
@@ -1,37 +1,66 @@
-<%
-=begin%>
- <h1 class="display-6">Create a new Event </h1>
-<br>
-<%= button_to "Create Event ", events_create_event_path, :method => "get", class: "btn btn-success btn-rounded" %> 
-<%
-=end%>
+<head>
+<%= csrf_meta_tags %>
+</head>
+
+<style>
+  #form-div, #referrals{
+    
+    text-align: center;
+  }
+
+  #file-button{
+    margin-left: 20%;
+  }
+
+</style>
 
 <br>
-<h1 class="display-6"> Import New Excel </h1>
 
-
-<%= form_tag import_new_spreadsheet_path, multipart: true do %>
-  <!--<div>-->
-  <!--  <%= label_tag(:username, "Gmail Username:") %><br>-->
-  <!--  <%= text_field_tag(:username) %>-->
-  <!--</div>-->
+<h1 class="display-6" style="text-align: center; color: gray;"> Guest List </h1>
+<br>
+<table class="table table-sm col-md-12">
   
-  <!--<div>-->
-  <!--  <%= label_tag(:password, "Gmail Password:") %><br>-->
-  <!--  <%= text_field_tag(:password) %>-->
-  <!--</div>-->
-  
-  <div>
+  <thead class="thead-light">
+    <tr>
+      <% @guest_params.each do |param| %>
+        <% column_title = param.dup.gsub('_', ' ')%>
+        <% column_title.capitalize! %>
+        <th><%= column_title %></th>
+      <% end %>
+      
+      <th>Action</th>
+      <th>Ticket Booking Status</th>
+      <th>Total Booked</th>
+    </tr>
+  </thead>
+  <tbody>
+        <tr>
+        <% @guest_params.each do |param| %>
+          <td>
+          </td>
+        <% end %>
+        </tr>
+  </tbody>
+</table>
+<br><br>
+<div id="form-div">
+<h2 style="color: gray;">Import Latest Box Office Data</h2>
+<%= form_tag import_new_spreadsheet_path, multipart: true  do %> 
+  <div style="text-align: center;">
     <br>
-    <%= file_field_tag(:file)%><br>
-    <%= label_tag(:file, "Accepted types: .xlsx") %>
-  </div>
-  
-  <div>
-    <%= submit_tag("Import") %>
+    <%= label_tag(:file, "Accepted types: .xlsx") %><br>
+    <%= file_field_tag(:file, :id => "file-button") %><br><br>
+    <%= submit_tag("Import Latest Box Office Data", :class => "btn btn-secondary btn-rounded") %>
   </div>
 <% end %>
-<br>
+</div>
+<br><br><br><br>
+<h1 class="display-6" style="text-align: center; color: gray;"> Referral Rewards </h1>
+
+<div id="referrals">
+    <br><br>
+    <%= button_tag("Create Referral Reward Template", :class => "btn btn-success btn-rounded") %>
+</div>
 
     
     
