--- a/app/views/events/create_event.html.erb
+++ b/app/views/events/create_event.html.erb
@@ -62,5 +62,11 @@
     <%= button_tag("Create Referral Reward Template", :class => "btn btn-success btn-rounded") %>
 </div>
 
+<br><br>
+
+<%= button_to "Back to Setup", root_path, :type => "button", class: "btn btn-secondary btn-rounded", :method => "get"%>
+
+<br><br>
+
     
     
