--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,6 +14,11 @@
     width:100%; 
     
   }
+
+  input, select, textarea{
+    color: white;
+  }
+  
 </style>
 <body>
 <div style="text-align: center">
